update(assets): moved all to public

--- a/src/style/home.css
+++ b/src/style/home.css
@@ -13,7 +13,7 @@
       rgba(0, 0, 0, 0) 50%,
       rgba(0, 0, 0, 1) 100%
     ),
-    url("@/assets/gradient.png");
+    url("/images/gradient.png");
   background-size: 100% 100%;
   border-bottom: 1px solid var(--quaternary);
   gap: 3rem;
