--- a/src/style/home.css
+++ b/src/style/home.css
@@ -83,8 +83,9 @@
 
 @media screen and (max-width: 600px) {
   .home-header {
-    height: calc(100vh - 2rem);
-    gap: 1.5rem;
+    height: fit-content;
+    gap: 3rem;
+    padding: 6rem 1rem 3rem 1rem;
   }
   .home-header-title {
     font-size: 2.5rem;
@@ -92,5 +93,8 @@
   .home-header-subtitle {
     font-size: 1rem;
     word-spacing: 0.25rem;
+  }
+  .home-header-arrow {
+    display: none;
   }
 }
