--- a/src/style/post-card.css
+++ b/src/style/post-card.css
@@ -6,7 +6,6 @@
   text-decoration: none;
   gap: 0.5rem;
   cursor: pointer;
-  text-align: center;
   transition: opacity 0.1s ease-in-out, transform 0.1s ease-in-out;
 }
 
@@ -23,6 +22,8 @@
   margin: 0.5rem 0 0.25rem 0;
   color: var(--primary);
   text-decoration: none;
+  margin-left: 1rem;
+  margin-top: 1rem;
 }
 
 .post-card-description {
@@ -30,12 +31,14 @@
   margin: 0.25rem 0 0.5rem 0;
   color: var(--secondary);
   text-decoration: none;
+  margin-left: 1rem;
 }
 
 .post-card-date {
   font-size: 0.8rem;
   color: var(--tertiary);
   text-decoration: none;
+  margin-left: 1rem;
 }
 
 @media (hover: hover) {
