--- a/src/style/post.css
+++ b/src/style/post.css
@@ -62,8 +62,16 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  line-height: 1.5rem;
+  line-height: 2.5rem;
   padding: 2rem 0;
+}
+
+.post-content p {
+  font-size: 1.2rem;
+}
+
+.post-content img {
+  width: 100%;
 }
 
 @media screen and (max-width: 600px) {
