--- a/src/style/master.css
+++ b/src/style/master.css
@@ -1,22 +1,22 @@
 :root {
   --primary: #fff;
-  --secondary: rgba(255, 255, 255, 0.6);
-  --tertiary: rgba(255, 255, 255, 0.31);
-  --quaternary: rgba(255, 255, 255, 0.13);
+  --secondary: #ffffff99;
+  --tertiary: #ffffff4f;
+  --quaternary: #ffffff21;
   --background: #000;
 
   --radius-small: 0.25rem;
   --radius-medium: 0.5rem;
   --radius-large: 0.75rem;
 
-  --header-font: "Syne", sans-serif;
+  --header-font: "Lexend Giga", sans-serif;
   --body-font: "Inter", sans-serif;
   --mono-font: "Red Hat Mono", monospace;
 }
 
 @font-face {
-  font-family: "Syne";
-  src: url("/fonts/syne.ttf") format("truetype-variations");
+  font-family: "Lexend Giga";
+  src: url("/fonts/lexend-giga.ttf") format("truetype-variations");
 }
 
 @font-face {
